--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,3 +1,29 @@
+@import "./global/media.scss";
 @import "./global/fonts.scss";
+@import "./global/visually-hidden.scss";
 @import "./blocks/page.scss";
 @import "./blocks/button.scss";
+@import "./blocks/header.scss";
+@import "./blocks/navigation.scss";
+@import "./blocks/promo.scss";
+@import "./blocks/footer.scss";
+@import "./blocks/nutrition-programm.scss";
+@import "./blocks/description.scss";
+@import "./blocks/example.scss";
+@import "./blocks/slider.scss";
+@import "./blocks/contacts.scss";
+@import "./blocks/products-list.scss";
+@import "./blocks/show-more.scss";
+@import "./blocks/additional.scss";
+@import "./blocks/ad.scss";
+@import "./blocks/form-cat-program.scss";
+@import "./blocks/background.scss";
+@import "./blocks/request-to-user.scss";
+@import "./blocks/product-item.scss";
+@import "./blocks/product-card.scss";
+@import "./blocks/inputs-group.scss";
+@import "./blocks/comment-label.scss";
+@import "./global/common.scss";
+@import "./blocks/social.scss";
+@import "./blocks/htmlacademy-logo.scss";
+@import "./blocks/catalog-title.scss";
