--- a/source/templates/footer.twig
+++ b/source/templates/footer.twig
@@ -1,6 +1,6 @@
-<footer class="page-footer">
-  <div class="logo-container">
-    <a href="index.html" class="logo-link" {% if permalink == "index.html" %}aria-current="page"{% endif %}>
+<footer class="footer">
+  <div class="footer__logo-container">
+    <a href="index.html" class="footer__logo-link" {% if permalink == "index.html" %}aria-current="page"{% endif %}>
       <img src="img/logo-words.svg" alt="" class="logo-words">
     </a>
   </div>
