стилизация всех страниц)(как смог)

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,3 +1,22 @@
 @import "./global/fonts.scss";
 @import "./blocks/page.scss";
 @import "./blocks/button.scss";
+@import "./blocks/page-header.scss";
+@import "./blocks/logo-container.scss";
+@import "./blocks/navigation.scss";
+@import "./blocks/common.scss";
+@import "./blocks/navigation-list.scss";
+@import "./blocks/promo.scss";
+@import "./blocks/page-main.scss";
+@import "./blocks/page-footer.scss";
+@import "./blocks/nutrition-programm.scss";
+@import "./blocks/description.scss";
+@import "./blocks/example.scss";
+@import "./blocks/slider.scss";
+@import "./blocks/example-facts.scss";
+@import "./blocks/contacts.scss";
+@import "./blocks/products.scss";
+@import "./blocks/show-more.scss";
+@import "./blocks/additional.scss";
+@import "./blocks/ad.scss";
+@import "./blocks/form-cat-program.scss";
