--- a/source/templates/footer.njk
+++ b/source/templates/footer.njk
@@ -1,6 +1,6 @@
 <footer class="page-footer">
-  <div class="logo-container">
-    <a href="index.html" class="logo-link">
+  <div class="page-footer__logo-container">
+    <a href="index.html" class="page-footer__logo-link">
       <img src="img/logo-words.svg" alt="" class="logo-words">
     </a>
   </div>
