--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -1,5 +1,39 @@
 .page-header {
-  display: flex;
-  justify-content: space-between;
-  padding: 10px 20px 18px;
+  position: relative;
+  box-sizing: border-box;
+  margin: 0 auto;
+  max-width: 320px;
+
+  @media (min-width: 321px) and (max-width: 769px) {
+    max-width: 767px;
+  }
+
+  @media (min-width: 769px) {
+    max-width: 1440px;
+  }
+}
+
+.background {
+  position: absolute;
+  width: 320px;
+  height: 302px;
+  background-image: url("../../img/promo-background-mini.png");
+  background-size: cover;
+  z-index: -1;
+
+  @media (min-width: 321px) and (max-width: 769px) {
+    background-image: none;
+  }
+
+  @media (min-width: 769px) {
+    right: 50%;
+    top: 0;
+    transform: translateX(100%);
+    background-image: url("../../img/promo-background-max.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: 100% 50%;
+    width: 720px;
+    height: 694px;
+  }
 }
