--- a/source/templates/header.njk
+++ b/source/templates/header.njk
@@ -1,15 +1,15 @@
 <header class="page-header">
-  <div class="logo-container">
-    <a href="index.html" class="logo-link">
-      <img src="img/logo-cat.svg" alt="" class="logo-img">
-      <img src="img/logo-words.svg" alt="" class="logo-words">
-    </a>
-  </div>
   <nav class="navigation">
-    <button class="navigation__menu-button" type="button" hidden>
-      <span class="visualyy-hidden">Кнопка вызова меню</span>
+    <div class="logo-container">
+      <a href="index.html" class="navigation__logo-link">
+        <img src="img/logo-cat.svg" alt="" class="logo-img">
+        <img src="img/logo-words.svg" alt="" class="logo-words">
+      </a>
+    </div>
+    <button class="navigation__menu-button" type="button">
+      <span class="visually-hidden">Кнопка вызова меню</span>
     </button>
-    <ul class="navigation__list">
+    <ul class="navigation-list">
       {% for page in pages %}
         <li class="navigation__item">
           <a
