--- a/source/sass/blocks/navigation-list.scss
+++ b/source/sass/blocks/navigation-list.scss
@@ -48,7 +48,7 @@
   text-transform: uppercase;
   text-align: center;
   text-decoration: none;
-  color: #000000;
+  color: var(--navigation-text-color);
   padding-top: 22px;
   padding-bottom: 24px;
 
