--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,10 +1,10 @@
 @import "./global/fonts.scss";
+@import "./global/visually-hidden.scss";
 @import "./blocks/page.scss";
 @import "./blocks/button.scss";
 @import "./blocks/page-header.scss";
 @import "./blocks/logo-container.scss";
 @import "./blocks/navigation.scss";
-@import "./blocks/common.scss";
 @import "./blocks/navigation-list.scss";
 @import "./blocks/promo.scss";
 @import "./blocks/page-main.scss";
@@ -20,3 +20,16 @@
 @import "./blocks/additional.scss";
 @import "./blocks/ad.scss";
 @import "./blocks/form-cat-program.scss";
+@import "./blocks/background.scss";
+@import "./blocks/request-to-user.scss";
+@import "./blocks/product.scss";
+@import "./blocks/product-card.scss";
+@import "./blocks/inputs-group-cat-parametrs.scss";
+@import "./blocks/inputs-group-type-program.scss";
+@import "./blocks/inputs-group.scss";
+@import "./blocks/comment-label.scss";
+@import "./blocks/inputs-group-user-contacts.scss";
+@import "./blocks/inputs-group-additionals.scss";
+@import "./blocks/common.scss";
+@import "./blocks/social.scss";
+@import "./blocks/htmlacademy-logo.scss";
