--- a/source/sass/blocks/common.scss
+++ b/source/sass/blocks/common.scss
@@ -1,4 +1,6 @@
-.visually-hidden {
-  position: absolute;
-  transform: scale(0);
+:root {
+  --base-font-color: #444444;
+  --button-color: #68b738;
+  --button-text-color: #ffffff;
+  --navigation-text-color: #000000;
 }
