--- a/source/sass/blocks/description.scss
+++ b/source/sass/blocks/description.scss
@@ -1,12 +1,3 @@
-.description {
-  padding: 20px 20px 20px;
-
-  @media (min-width: 769px) {
-    padding-left: 110px;
-    padding-right: 110px;
-  }
-}
-
 .description__title {
   font-family: "Oswald", sans-serif;
   font-size: 36px;
@@ -15,8 +6,10 @@
   color: #000000;
   text-align: start;
   margin-bottom: 40px;
+}
 
-  @media (min-width: 321px) {
+@media (min-width: 321px) {
+  .description__title {
     font-size: 60px;
     line-height: 60px;
     margin-bottom: 32px;
@@ -28,7 +21,7 @@
   font-size: 14px;
   line-height: 18px;
   padding-left: 20px;
-  color: #444444;
+  color: var(--base-font-color);
 
   @media (min-width: 321px) {
     font-size: 16px;
@@ -43,45 +36,53 @@
   margin: 0;
   padding: 0;
   list-style: none;
+}
 
-  @media (min-width: 321px) {
+@media (min-width: 321px) {
+  .description__list {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
-    max-width: 629px;
     row-gap: 37px;
+    max-width: 629px;
+  }
 
-    & .description__item--feed {
-      background: url("../../img/examples/background-one.svg") no-repeat;
-      background-size: contain;
-      background-position-x: right;
-    }
+  .description__item--feed {
+    background: url("../../img/examples/background-one.svg") no-repeat;
+    background-size: contain;
+    background-position-x: right;
+  }
 
-    & .description__item--powder {
-      background: url("../../img/examples/background-two.svg") no-repeat;
-      background-size: contain;
-      background-position-x: right;
-    }
+  .description__item--powder {
+    background: url("../../img/examples/background-two.svg") no-repeat;
+    background-size: contain;
+    background-position-x: right;
+  }
 
-    & .description__item--eating {
-      background: url("../../img/examples/background-three.svg") no-repeat;
-      background-size: contain;
-      background-position-x: right;
-    }
+  .description__item--eating {
+    background: url("../../img/examples/background-three.svg") no-repeat;
+    background-size: contain;
+    background-position-x: right;
+  }
 
-    & .description__item--timer {
-      background: url("../../img/examples/background-four.svg") no-repeat;
-      background-size: contain;
-      background-position-x: right;
-    }
-
-    & .description__item {
-      box-sizing: border-box;
-      max-width: 230px;
-    }
+  .description__item--timer {
+    background: url("../../img/examples/background-four.svg") no-repeat;
+    background-size: contain;
+    background-position-x: right;
   }
 
   @media (min-width: 769px) {
-    max-width: 1224px;
+    .description__list {
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      row-gap: 37px;
+      max-width: 1224px;
+    }
+  }
+
+  .description__item {
+    box-sizing: border-box;
+    max-width: 230px;
   }
 }
