--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -1,10 +1,10 @@
 .example {
   background-color: #eaeaea;
-  padding: 25px 20px;
+  padding: 25px 0;
 
   @media (min-width: 769px) {
     display: flex;
-    padding: 70px 110px;
+    padding: 70px 0;
   }
 }
 
@@ -22,6 +22,6 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 18px;
-  color: #444444;
+  color: var(--base-font-color);
   margin: 0;
 }
