--- a/source/sass/blocks/nutrition-programm.scss
+++ b/source/sass/blocks/nutrition-programm.scss
@@ -2,8 +2,6 @@
   @media (min-width: 769px) {
     display: flex;
     gap: 80px;
-    padding-left: 110px;
-    padding-right: 110px;
   }
 }
 
@@ -17,77 +15,73 @@
     max-width: 570px;
     margin: 0;
   }
+}
 
-  .nutrition-programm__title {
-    font-family: "Oswald", sans-serif;
-    font-size: 24px;
-    line-height: 37px;
-    font-weight: 400;
-    color: #000000;
-    text-transform: uppercase;
-    text-align: center;
-    margin: 0;
-    margin-bottom: 29px;
+.nutrition-programm__title {
+  font-family: "Oswald", sans-serif;
+  font-size: 24px;
+  line-height: 37px;
+  font-weight: 400;
+  color: #000000;
+  text-transform: uppercase;
+  text-align: center;
+  margin: 0;
+  margin-bottom: 29px;
 
-    @media (min-width: 321px) {
-      text-align: start;
-    }
-  }
-
-  .nutrition-programm__text {
-    font-family: "Arial", sans-serif;
-    font-size: 14px;
-    line-height: 18px;
-    font-weight: 400;
-    color: #444444;
-    margin: 0;
-    margin-bottom: 23px;
-  }
-
-  .nutrition-programm__link {
-    display: block;
-    font-family: "Oswald", sans-serif;
-    font-size: 16px;
-    line-height: 16px;
-    font-weight: 400;
-    color: #000000;
-    text-transform: uppercase;
-    text-decoration: none;
-    border-top: 1px solid #d9d9d9;
-    padding-top: 15px;
-
-    &::after {
-      content: url("data:image/svg+xml,%3Csvg width='24' height='12' viewBox='0 0 24 12' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cline y1='6' x2='18' y2='6' stroke='black' stroke-width='2'/%3E%3Cpath d='M24 6L17.25 11.1962L17.25 0.803848L24 6Z' fill='black'/%3E%3C/svg%3E%0A");
-      display: inline-block;
-      width: 24px;
-      height: 12px;
-      margin-left: 15px;
-
-      @media (min-width: 321px) {
-        margin-left: 25px;
-      }
-
-      @media (min-width: 769px) {
-        margin-left: 28px;
-      }
-    }
+  @media (min-width: 321px) {
+    text-align: start;
   }
 }
 
-.nutrition-programm__card--slim {
-  &::before {
-    content: url("../../icons/cat-slim.svg");
-    display: block;
-    width: 50px;
-    height: 53px;
+.nutrition-programm__text {
+  font-family: "Arial", sans-serif;
+  font-size: 14px;
+  line-height: 18px;
+  font-weight: 400;
+  color: var(--base-font-color);
+  margin: 0;
+  margin-bottom: 23px;
+}
+
+.nutrition-programm__link {
+  display: block;
+  font-family: "Oswald", sans-serif;
+  font-size: 16px;
+  line-height: 16px;
+  font-weight: 400;
+  color: #000000;
+  text-transform: uppercase;
+  text-decoration: none;
+  border-top: 1px solid #d9d9d9;
+  padding-top: 15px;
+}
+
+.nutrition-programm__link::after {
+  content: url("data:image/svg+xml,%3Csvg width='24' height='12' viewBox='0 0 24 12' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cline y1='6' x2='18' y2='6' stroke='black' stroke-width='2'/%3E%3Cpath d='M24 6L17.25 11.1962L17.25 0.803848L24 6Z' fill='black'/%3E%3C/svg%3E%0A");
+  display: inline-block;
+  width: 24px;
+  height: 12px;
+  margin-left: 15px;
+
+  @media (min-width: 321px) {
+    margin-left: 25px;
+  }
+
+  @media (min-width: 769px) {
+    margin-left: 28px;
   }
 }
 
-.nutrition-programm__card--fat {
-  &::before {
-    content: url("/source/icons/cat-muscle.svg");
-    display: block;
-    width: 67px;
-    height: 50px;
-  }
+.nutrition-programm__card--slim::before {
+  content: url("../../icons/cat-slim.svg");
+  display: block;
+  width: 50px;
+  height: 53px;
+}
+
+.nutrition-programm__card--fat::before {
+  content: url("/source/icons/cat-muscle.svg");
+  display: block;
+  width: 67px;
+  height: 50px;
 }
