--- a/source/sass/blocks/show-more.scss
+++ b/source/sass/blocks/show-more.scss
@@ -10,52 +10,6 @@
   padding: 78px 0 25px;
   border-top: 1px solid #ebebeb;
 
-  .show-more__important-text {
-    font-size: 16px;
-    line-height: 20px;
-    color: #111111;
-    margin: 0;
-    margin-bottom: 8px;
-  }
-
-  .show-more__regular-text {
-    flex-grow: 1;
-    font-family: "Arial", sans-serif;
-    font-size: 12px;
-    line-height: 16px;
-    color: #444444;
-    margin: 0;
-    margin-bottom: 21px;
-  }
-
-  .show-more__button {
-    display: block;
-    font-size: 16px;
-    line-height: 20px;
-    color: #444444;
-    text-decoration: none;
-    text-transform: uppercase;
-    background-color: #f2f2f2;
-    padding: 10px 10px;
-    margin: 0 20px;
-  }
-
-  &::before {
-    content: url("data:image/svg+xml,%3Csvg width='30' height='30' viewBox='0 0 30 30' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='%23D3D3D3' stroke-width='2' d='M15 0v30M30 15H0'/%3E%3C/svg%3E");
-    position: absolute;
-    top: 0;
-    left: 50%;
-    transform: translate(-50%, 50%);
-    display: block;
-    width: 30px;
-    height: 30px;
-
-    @media (min-width: 321px) {
-      width: 60px;
-      height: 60px;
-    }
-  }
-
   @media (min-width: 321px) {
     box-sizing: border-box;
     width: 100%;
@@ -68,5 +22,51 @@
 
   @media (min-width: 769px) {
     max-width: 245px;
+  }
+}
+
+.show-more__important-text {
+  font-size: 16px;
+  line-height: 20px;
+  color: #111111;
+  margin: 0;
+  margin-bottom: 8px;
+}
+
+.show-more__regular-text {
+  flex-grow: 1;
+  font-family: "Arial", sans-serif;
+  font-size: 12px;
+  line-height: 16px;
+  color: var(--base-font-color);
+  margin: 0;
+  margin-bottom: 21px;
+}
+
+.show-more__button {
+  display: block;
+  font-size: 16px;
+  line-height: 20px;
+  color: var(--base-font-color);
+  text-decoration: none;
+  text-transform: uppercase;
+  background-color: #f2f2f2;
+  padding: 10px 10px;
+  margin: 0 20px;
+}
+
+.show-more::before {
+  content: url("data:image/svg+xml,%3Csvg width='30' height='30' viewBox='0 0 30 30' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='%23D3D3D3' stroke-width='2' d='M15 0v30M30 15H0'/%3E%3C/svg%3E");
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%, 50%);
+  display: block;
+  width: 30px;
+  height: 30px;
+
+  @media (min-width: 321px) {
+    width: 60px;
+    height: 60px;
   }
 }
