--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -33,3 +33,4 @@
 @import "./blocks/common.scss";
 @import "./blocks/social.scss";
 @import "./blocks/htmlacademy-logo.scss";
+@import "./blocks/additional-products.scss";
