--- a/source/sass/blocks/additional.scss
+++ b/source/sass/blocks/additional.scss
@@ -11,7 +11,7 @@
   font-weight: 400;
   text-align: left;
   white-space: nowrap;
-  margin: 25px 0 36px 20px;
+  margin: 0;
 }
 
 
@@ -26,10 +26,6 @@
     display: grid;
     grid-template-columns: 1fr 245px;
     align-items: center;
-  }
-
-  .additional-products {
-    flex-grow: 1;
   }
 
   .additional__title {
