--- a/source/sass/blocks/description.scss
+++ b/source/sass/blocks/description.scss
@@ -5,14 +5,13 @@
   font-weight: 400;
   color: #000000;
   text-align: start;
-  margin-bottom: 40px;
+  margin: 0;
 }
 
 @media (min-width: 321px) {
   .description__title {
     font-size: 60px;
     line-height: 60px;
-    margin-bottom: 32px;
   }
 }
 
@@ -44,7 +43,6 @@
     flex-wrap: wrap;
     justify-content: space-between;
     row-gap: 37px;
-    max-width: 629px;
   }
 
   .description__item--feed {
@@ -77,7 +75,6 @@
       flex-wrap: wrap;
       justify-content: space-between;
       row-gap: 37px;
-      max-width: 1224px;
     }
   }
 
