--- a/source/sass/blocks/inputs-group-additionals.scss
+++ b/source/sass/blocks/inputs-group-additionals.scss
@@ -7,6 +7,7 @@
   }
 
   @media (min-width: 769px) {
+    grid-column: 1/-1;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
