--- a/source/sass/blocks/products.scss
+++ b/source/sass/blocks/products.scss
@@ -11,10 +11,10 @@
     flex-wrap: wrap;
     column-gap: 60px;
     row-gap: 141px;
-    padding: 163px 30px 0;
+    padding: 163px 0 0;
   }
 
   @media (min-width: 769px) {
-    padding: 165px 110px 0;
+    padding: 165px 0 0;
   }
 }
