--- a/source/sass/blocks/request-to-user.scss
+++ b/source/sass/blocks/request-to-user.scss
@@ -4,16 +4,10 @@
   line-height: 18px;
   font-weight: 400;
   color: #000000;
-  margin: 0 0 39px;
+  margin: 0;
 
   @media (min-width: 321px) {
     font-size: 20px;
     line-height: 30px;
-    padding-left: 70px;
-    margin-bottom: 66px;
-  }
-
-  @media (min-width: 769px) {
-    padding-left: 110px;
   }
 }
