--- a/source/sass/blocks/show-more.scss
+++ b/source/sass/blocks/show-more.scss
@@ -30,7 +30,6 @@
   line-height: 20px;
   color: #111111;
   margin: 0;
-  margin-bottom: 8px;
 }
 
 .show-more__regular-text {
@@ -40,7 +39,6 @@
   line-height: 16px;
   color: var(--base-font-color);
   margin: 0;
-  margin-bottom: 21px;
 }
 
 .show-more__button {
@@ -52,7 +50,7 @@
   text-transform: uppercase;
   background-color: #f2f2f2;
   padding: 10px 10px;
-  margin: 0 20px;
+  margin: 0;
 }
 
 .show-more::before {
