--- a/source/sass/blocks/catalog-title.scss
+++ b/source/sass/blocks/catalog-title.scss
@@ -1,5 +1,4 @@
-.catalog-title,
-.page__form-title {
+.catalog-title {
   font-family: "Oswald", sans-serif;
   font-size: 36px;
   line-height: 36px;
