--- a/source/sass/blocks/description.scss
+++ b/source/sass/blocks/description.scss
@@ -19,7 +19,7 @@
   font-family: "Arial", sans-serif;
   font-size: 14px;
   line-height: 18px;
-  padding-left: 20px;
+  margin: 0;
   color: var(--base-font-color);
 
   @media (min-width: 321px) {
