--- a/source/sass/blocks/example-facts.scss
+++ b/source/sass/blocks/example-facts.scss
@@ -30,8 +30,7 @@
   }
 }
 
-.example-facts__item-fact--spending,
-.example__spending {
+.example-facts__item-fact--spending {
   font-family: "Oswald", sans-serif;
   font-size: 14px;
   line-height: 20px;
