--- a/source/templates/footer.njk
+++ b/source/templates/footer.njk
@@ -1,4 +1,4 @@
-<footer class="page-footer">
+<footer class="footer">
   <div class="page-footer__logo-container">
     <a href="index.html" class="page-footer__logo-link">
       <img src="img/logo-words.svg" alt="" class="logo-words">
