--- a/source/sass/blocks/additional-products-list.scss
+++ b/source/sass/blocks/additional-products-list.scss
@@ -1,4 +1,6 @@
-.additional-products {
+.additional-products-list {
+  display: flex;
+  flex-direction: column;
   margin: 0;
   list-style: none;
   padding: 0;
