--- a/source/sass/blocks/comment-label.scss
+++ b/source/sass/blocks/comment-label.scss
@@ -8,3 +8,75 @@
     grid-column: 1/-1;
   }
 }
+
+.comment-label__title {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  flex-grow: 1;
+  font-family: "Oswald", sans-serif;
+  font-size: 24px;
+  line-height: 24px;
+  font-weight: 400;
+  text-align: left;
+  width: 100%;
+  padding: 25px 0 36px 0;
+
+  &::after {
+    content: "";
+    position: absolute;
+    top: 50%;
+    right: -20px;
+    display: block;
+    width: 99px;
+    height: 2px;
+    background-color: var(--line-color);
+  }
+
+  @media (min-width: 321px) and (max-width: 769px) {
+    white-space: nowrap;
+
+    &::after {
+      width: 50%;
+      right: -30px;
+    }
+
+    &::before {
+      content: "";
+      position: absolute;
+      top: 50%;
+      left: -30px;
+      display: block;
+      width: 30px;
+      height: 2px;
+      background-color: var(--line-color);
+      margin-right: 37px;
+    }
+  }
+
+
+  @media (min-width: 769px) {
+    &::after {
+      content: "";
+      top: 50%;
+      right: 0;
+      display: block;
+      width: 50%;
+      height: 2px;
+      background-color: var(--line-color);
+      margin-left: 35px;
+    }
+
+    &::before {
+      content: "";
+      top: 50%;
+      left: 0;
+      display: block;
+      width: 70px;
+      height: 2px;
+      background-color: var(--line-color);
+      margin-right: 40px;
+    }
+  }
+}
