--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -8,6 +8,18 @@
   }
 }
 
+.example__spending {
+  font-family: "Oswald", sans-serif;
+  font-size: 14px;
+  line-height: 20px;
+  color: #000000;
+  text-transform: uppercase;
+
+  @media (min-width: 321px) {
+    font-size: 20px;
+  }
+}
+
 .example__title {
   font-family: "Oswald", serif;
   font-weight: 400;
