--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -1,4 +1,4 @@
-.page-footer {
+.footer {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
@@ -20,6 +20,6 @@
   }
 }
 
-.page-footer__logo-container {
+.footer__logo-container {
   margin: 0 auto;
 }
