--- a/source/sass/blocks/inputs-group-type-program.scss
+++ b/source/sass/blocks/inputs-group-type-program.scss
@@ -1,12 +1,27 @@
 .inputs-group-type-program {
+  position: relative;
   margin: 0;
+  border: solid;
 
   @media (min-width: 321px) {
-    padding: 25px 28px;
-    border: 1px solid #d9d9d9;
+    grid-column: 1/-1;
   }
 
   @media (min-width: 769px) {
     grid-column: 2/3;
+  }
+}
+
+@media (min-width: 769px) {
+  .inputs-group-type-program::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: -1;
+    display: block;
+    width: 100%;
+    height: 100%;
+    box-shadow: inset 0 0 0 1px #d9d9d9;
   }
 }
