--- a/source/sass/blocks/inputs-group-user-contacts.scss
+++ b/source/sass/blocks/inputs-group-user-contacts.scss
@@ -13,7 +13,7 @@
   }
 }
 
-label[for="email"] {
+.inputs-group__input-label--email {
   position: relative;
 
   &::after {
@@ -29,7 +29,7 @@ label[for="email"] {
   }
 }
 
-label[for="phone"] {
+.inputs-group__input-label--phone {
   position: relative;
 
   &::after {
