--- a/source/sass/blocks/navigation.scss
+++ b/source/sass/blocks/navigation.scss
@@ -18,6 +18,28 @@
   }
 }
 
+.navigation__logo-link {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  box-sizing: border-box;
+  align-items: center;
+  flex-wrap: nowrap;
+  text-decoration: none;
+
+  @media (min-width: 321px) and (max-width: 769px) {
+    display: flex;
+    justify-content: space-between;
+    max-width: 174px;
+  }
+
+  @media (min-width: 769px) {
+    display: flex;
+    justify-content: space-between;
+    max-width: 202px;
+  }
+}
+
+
 .navigation__menu-button {
   box-sizing: border-box;
   width: 24px;
@@ -53,4 +75,42 @@
   height: auto;
   border: none;
   outline: none;
+}
+
+.navigation__item {
+  box-sizing: border-box;
+  background-color: #ffffff;
+  border-top: 1px solid;
+  border-color: #e6e6e6;
+
+  @media (min-width: 321px) {
+    border-color: transparent;
+    background-color: transparent;
+  }
+}
+
+.navigation__link {
+  display: block;
+  font-family: "Oswald", sans-serif;
+  font-size: 20px;
+  line-height: 20px;
+  font-weight: 500;
+  text-transform: uppercase;
+  text-align: center;
+  text-decoration: none;
+  color: var(--navigation-text-color);
+  padding-top: 22px;
+  padding-bottom: 24px;
+
+  @media (min-width: 321px) and (max-width: 769px) {
+    font-size: 18px;
+    line-height: 24px;
+    font-weight: 400;
+  }
+
+  @media (min-width: 769px) {
+    font-size: 20px;
+    line-height: 30px;
+    font-weight: 400;
+  }
 }
