--- a/source/sass/blocks/product-item.scss
+++ b/source/sass/blocks/product-item.scss
@@ -1,4 +1,4 @@
-.product {
+.product-item {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   align-items: center;
@@ -13,11 +13,11 @@
   }
 }
 
-.product:last-child {
+.product-item:last-child {
   border-bottom: 1px solid #cdcdcd;
 }
 
-.product__name {
+.product-item__name {
   grid-column: 1/-1;
   font-family: "Oswald", sans-serif;
   font-size: 16px;
@@ -32,8 +32,8 @@
   }
 }
 
-.product__unit,
-.product__price {
+.product-item__unit,
+.product-item__price {
   font-family: "Arial", sans-serif;
   font-size: 14px;
   line-height: 14px;
@@ -44,11 +44,11 @@
   }
 }
 
-.product__price {
+.product-item__price {
   text-align: right;
 }
 
-.product__order-button {
+.product-item__order-button {
   grid-column: 1/-1;
   font-family: "Oswald", sans-serif;
   font-size: 16px;
