--- a/source/templates/header.njk
+++ b/source/templates/header.njk
@@ -1,4 +1,4 @@
-<header class="page-header">
+<header class="header">
   <nav class="navigation">
     <div class="logo-container">
       <a href="index.html" class="navigation__logo-link">
