--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,18 +1,16 @@
+@import "./global/media.scss";
 @import "./global/fonts.scss";
 @import "./global/visually-hidden.scss";
 @import "./blocks/page.scss";
 @import "./blocks/button.scss";
 @import "./blocks/header.scss";
-@import "./blocks/logo-container.scss";
 @import "./blocks/navigation.scss";
-@import "./blocks/navigation-list.scss";
 @import "./blocks/promo.scss";
 @import "./blocks/footer.scss";
 @import "./blocks/nutrition-programm.scss";
 @import "./blocks/description.scss";
 @import "./blocks/example.scss";
 @import "./blocks/slider.scss";
-@import "./blocks/example-facts.scss";
 @import "./blocks/contacts.scss";
 @import "./blocks/products-list.scss";
 @import "./blocks/show-more.scss";
@@ -23,14 +21,9 @@
 @import "./blocks/request-to-user.scss";
 @import "./blocks/product-item.scss";
 @import "./blocks/product-card.scss";
-@import "./blocks/inputs-group-cat-parametrs.scss";
-@import "./blocks/inputs-group-type-program.scss";
 @import "./blocks/inputs-group.scss";
 @import "./blocks/comment-label.scss";
-@import "./blocks/inputs-group-user-contacts.scss";
-@import "./blocks/inputs-group-additionals.scss";
 @import "./global/common.scss";
 @import "./blocks/social.scss";
 @import "./blocks/htmlacademy-logo.scss";
-@import "./blocks/additional-products-list.scss";
 @import "./blocks/catalog-title.scss";
