--- a/source/sass/blocks/additional.scss
+++ b/source/sass/blocks/additional.scss
@@ -14,14 +14,26 @@
   margin: 0;
 }
 
+.additional__products-list {
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  list-style: none;
+  padding: 0;
 
-@media (max-width: 321px) {
+  @media (--wide-vp) {
+    flex-grow: 1;
+  }
+}
+
+
+@media (--narrow-vp) {
   .additional {
     border-top: 1px solid #ebebeb;
   }
 }
 
-@media (min-width: 769px) {
+@media (--wide-vp) {
   .additional {
     display: grid;
     grid-template-columns: 1fr 245px;
@@ -52,7 +64,7 @@
 }
 
 
-@media (min-width: 321px) and (max-width: 769px) {
+@media (--middle-vp) {
   .additional__title {
     position: relative;
     margin-left: 0;
