--- a/source/sass/blocks/background.scss
+++ b/source/sass/blocks/background.scss
@@ -1,16 +1,18 @@
 .background {
   position: absolute;
-  width: 320px;
-  height: 302px;
+  max-width: 768px;
+  max-height: 500px;
+  width: 100%;
+  height: 100%;
   background-image: url("../../img/promo-background-mini.png");
   background-size: cover;
   z-index: -1;
 
-  @media (min-width: 321px) and (max-width: 769px) {
-    background-image: none;
+  @media (--middle-vp) {
+    display: none;
   }
 
-  @media (min-width: 769px) {
+  @media (--wide-vp) {
     right: 0;
     top: 0;
     background-image: url("../../img/promo-background-max.png");
