--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  align-items: center;
   padding-left: 0;
   padding-right: 0;
   padding-bottom: 22px;
@@ -9,12 +10,12 @@
   margin: 0 auto;
   background-color: #f2f2f2;
 
-  @media (min-width: 321px) and (max-width: 769px) {
+  @media (--wide-vp) {
     flex-wrap: nowrap;
     padding: 58px 0 55px;
   }
 
-  @media (min-width: 769px) {
+  @media (--wide-vp) {
     flex-wrap: nowrap;
     padding: 57px 0 58px;
   }
