--- a/source/sass/blocks/navigation.scss
+++ b/source/sass/blocks/navigation.scss
@@ -3,20 +3,51 @@
   align-items: center;
   padding: 10px 0 10px 0;
 
-  @media (max-width: 321px) {
+  @media (--middle-vp) {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-  }
-
-  @media (min-width: 321px) and (max-width: 769px) {
     padding: 19px 0 10px 0;
   }
 
-  @media (min-width: 769px) {
+  @media (--wide-vp) {
     padding-top: 53px;
   }
 }
+
+.navigation__logo-container {
+  flex: 1 0 auto;
+}
+
+.navigation__list {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  flex-direction: column;
+  display: none;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  z-index: 1;
+
+  @media (--middle-vp) {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    max-width: 440px;
+  }
+
+  @media (--wide-vp) {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    max-width: 478px;
+  }
+}
+
 
 .navigation__logo-link {
   display: grid;
@@ -26,13 +57,13 @@
   flex-wrap: nowrap;
   text-decoration: none;
 
-  @media (min-width: 321px) and (max-width: 769px) {
+  @media (--middle-vp) and (--wide-vp) {
     display: flex;
     justify-content: space-between;
     max-width: 174px;
   }
 
-  @media (min-width: 769px) {
+  @media (--wide-vp) {
     display: flex;
     justify-content: space-between;
     max-width: 202px;
@@ -50,7 +81,11 @@
   outline: none;
   border: none;
 
-  @media (min-width: 321px) {
+  @media (--middle-vp) {
+    display: none;
+  }
+
+  @media (--wide-vp) {
     display: none;
   }
 }
@@ -64,7 +99,7 @@
   outline: none;
 }
 
-.navigation__menu-button:hover + .navigation-list {
+.navigation__menu-button:hover + .navigation__list {
   display: block;
 }
 
@@ -83,7 +118,12 @@
   border-top: 1px solid;
   border-color: #e6e6e6;
 
-  @media (min-width: 321px) {
+  @media (--wide-vp) {
+    border-color: transparent;
+    background-color: transparent;
+  }
+
+  @media (--middle-vp) {
     border-color: transparent;
     background-color: transparent;
   }
@@ -102,13 +142,13 @@
   padding-top: 22px;
   padding-bottom: 24px;
 
-  @media (min-width: 321px) and (max-width: 769px) {
+  @media (--middle-vp) {
     font-size: 18px;
     line-height: 24px;
     font-weight: 400;
   }
 
-  @media (min-width: 769px) {
+  @media (--wide-vp) {
     font-size: 20px;
     line-height: 30px;
     font-weight: 400;
