--- a/source/sass/blocks/nutrition-programm.scss
+++ b/source/sass/blocks/nutrition-programm.scss
@@ -4,7 +4,7 @@
   gap: 20px;
   padding: 20px 0;
 
-  @media (min-width: 769px) {
+  @media (--wide-vp) {
     display: flex;
     flex-direction: row;
     gap: 80px;
@@ -16,7 +16,7 @@
   background-color: #f2f2f2;
   padding: 22px;
 
-  @media (min-width: 769px) {
+  @media (--wide-vp) {
     max-width: 570px;
     margin: 0;
   }
@@ -32,7 +32,7 @@
   text-align: center;
   margin: 0;
 
-  @media (min-width: 321px) {
+  @media (--middle-vp) {
     text-align: start;
   }
 }
@@ -66,11 +66,11 @@
   height: 12px;
   margin-left: 15px;
 
-  @media (min-width: 321px) {
+  @media (--middle-vp) {
     margin-left: 25px;
   }
 
-  @media (min-width: 769px) {
+  @media (--wide-vp) {
     margin-left: 28px;
   }
 }
