--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -14,16 +14,18 @@
 
   @media (--narrow-vp) {
     --content-indent: calc(20px + (10vw - 32px) / 4.48);
+    margin: 0 auto;
   }
 
   @media (--middle-vp) {
     --content-indent: 30px;
+    margin: 0 auto;
   }
 
   @media (--wide-vp) {
     --content-indent: auto;
-
-    width: 1220px;
+    max-width: 1220px;
+    margin: 0 auto;
   }
 }
 
@@ -36,7 +38,13 @@
   text-align: center;
   margin: 0;
 
-  @media (min-width: 321px) {
+  @media (--middle-vp) {
+    font-size: 60px;
+    line-height: 60px;
+    text-align: left;
+  }
+
+  @media (--wide-vp) {
     font-size: 60px;
     line-height: 60px;
     text-align: left;
