--- a/source/sass/blocks/product-card.scss
+++ b/source/sass/blocks/product-card.scss
@@ -5,7 +5,7 @@
   border-top: 1px solid #ebebeb;
 }
 
-@media (min-width: 321px) {
+@media (--middle-vp) {
   .product-card {
     position: relative;
     grid-template-columns: 1fr;
@@ -20,12 +20,46 @@
     background-color: #f2f2f2;
   }
 
-  @media (min-width: 769px) {
-    .product-card {
-      max-width: 245px;
-    }
+  .product-card__image {
+    position: absolute;
+    bottom: 100%;
+    left: 50%;
+    transform: translate(-50%, 50%);
+    width: 168px;
+    height: 200px;
   }
 
+
+  .product-card__item-value,
+  .product-card__item-name {
+    font-size: 16px;
+    padding: 9px 0;
+    border-bottom: 1px solid #cdcdcd;
+  }
+
+  .product-card__title {
+    font-size: 20px;
+    line-height: 24px;
+    text-align: center;
+    color: #222222;
+    padding: 0 62px;
+  }
+}
+
+@media (--wide-vp) {
+  .product-card {
+    position: relative;
+    grid-template-columns: 1fr;
+    box-sizing: border-box;
+    width: 100%;
+    max-width: 245px;
+    padding-top: 161px;
+    padding-left: 36px;
+    padding-right: 36px;
+    padding-bottom: 39px;
+    border: none;
+    background-color: #f2f2f2;
+  }
 
   .product-card__image {
     position: absolute;
@@ -56,6 +90,7 @@
 .product-card__text {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  align-items: center;
   font-family: "Arial", sans-serif;
   font-size: 12px;
   line-height: 16px;
@@ -97,5 +132,7 @@
 
 .product-card__image {
   display: block;
-  width: 100%;
+  width: 140px;
+  height: 100%;
+  object-fit: contain;
 }
