--- a/source/sass/blocks/products-list.scss
+++ b/source/sass/blocks/products-list.scss
@@ -1,12 +1,15 @@
 .products-list {
-  display: flex;
-  flex-direction: column;
-  gap: 25px;
-  padding: 41px 0 0;
-  margin: 0;
-  list-style: none;
+  @media (--narrow-vp) {
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+    padding: 41px 0 0;
+    margin: 0;
+    list-style: none;
+  }
 
-  @media (min-width: 321px) {
+  @media (--middle-vp) {
+    display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     column-gap: 60px;
@@ -14,7 +17,12 @@
     padding: 163px 0 0;
   }
 
-  @media (min-width: 769px) {
+  @media (--wide-vp) {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    column-gap: 60px;
+    row-gap: 141px;
     padding: 165px 0 0;
   }
 }
