--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -4,12 +4,12 @@
   padding-top: 27px;
   min-height: 420px;
 
-  @media (min-width: 321px) and (max-width: 769px) {
+  @media (--wide-vp) {
     min-height: 790px;
     padding-top: 40px;
   }
 
-  @media (min-width: 769px) {
+  @media (--wide-vp) {
     max-width: 100%;
     text-align: left;
     color: #000000;
@@ -25,14 +25,14 @@
   color: #ffffff;
   margin: 0;
 
-  @media (min-width: 321px) and (max-width: 769px) {
+  @media (--wide-vp) {
     font-size: 60px;
     line-height: 60px;
     text-align: start;
     color: #000000;
   }
 
-  @media (min-width: 769px) {
+  @media (--wide-vp) {
     color: #000000;
   }
 }
@@ -46,27 +46,27 @@
   color: #ffffff;
   margin: 0;
 
-  @media (min-width: 321px) and (max-width: 769px) {
+  @media (--wide-vp) {
     font-size: 20px;
     line-height: 20px;
     text-align: start;
     color: #000000;
   }
 
-  @media (min-width: 769px) {
+  @media (--wide-vp) {
     color: #000000;
   }
 }
 
-.image-container {
+.promo__image-container {
   position: absolute;
   z-index: -1;
 
-  @media (min-width: 321px) and (max-width: 769px) {
+  @media (--wide-vp) {
     left: 120px;
   }
 
-  @media (min-width: 769px) {
+  @media (--wide-vp) {
     top: 0;
     left: 33%;
   }
@@ -77,7 +77,7 @@
   width: 100%;
   height: 100%;
 
-  @media (min-width: 769px) {
+  @media (--wide-vp) {
     max-width: 552px;
   }
 }
@@ -98,7 +98,7 @@
   padding: 7px;
   background-color: var(--button-color);
 
-  @media (min-width: 321px) and (max-width: 769px) {
+  @media (--wide-vp) {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -112,7 +112,7 @@
     bottom: 100%;
   }
 
-  @media (min-width: 769px) {
+  @media (--wide-vp) {
     position: relative;
     display: flex;
     justify-content: center;
