--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -5,7 +5,12 @@
   flex-grow: 1;
   border-top: 1px solid #d9d9d9;
 
-  @media (min-width: 321px) {
+  @media (--middle-vp) {
+    border: transparent;
+    order: 0;
+  }
+
+  @media (--wide-vp) {
     border: transparent;
     order: 0;
   }
