--- a/source/sass/global/common.scss
+++ b/source/sass/global/common.scss
@@ -3,4 +3,6 @@
   --button-color: #68b738;
   --button-text-color: #ffffff;
   --navigation-text-color: #000000;
+  --input-border-color: #e7e7e7;
+  --show-more-base-color: #f2f2f2;
 }
