--- a/source/templates/header.njk
+++ b/source/templates/header.njk
@@ -1,6 +1,6 @@
 <header class="header">
   <nav class="navigation">
-    <div class="logo-container">
+    <div class="navigation__logo-container">
       <a href="index.html" class="navigation__logo-link">
         <img src="img/logo-cat.svg" alt="" class="logo-img">
         <img src="img/logo-words.svg" alt="" class="logo-words">
@@ -9,7 +9,7 @@
     <button class="navigation__menu-button" type="button">
       <span class="visually-hidden">Кнопка вызова меню</span>
     </button>
-    <ul class="navigation-list">
+    <ul class="navigation__list">
       {% for page in pages %}
         <li class="navigation__item">
           <a
